--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-#envlist = py27,py35
-envlist = py27
+envlist = py27,py35,pypy
 
 [testenv]
 deps = -rrequirements.txt
        -rtest-requirements.txt
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-#commands = py.test --cov-report=term-missing --cov=onionbalance {posargs}
-commands = py.test --cov-report=term-missing --cov=onionbalance {posargs}
+commands = py.test --cov-report=term-missing --cov=vanguards {posargs}
