--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27,py35,pypy,pypy3
+envlist = py27,py35,pypy
 
 [testenv]
 deps = -rrequirements.txt
