Enable config of loglevel and log output file.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -27,6 +27,9 @@ enable_rendguard = True
 # The current loglevel:
 loglevel = NOTICE
 
+# If specified, log to this file instead of stdout:
+logfile =
+
 # Name of state file (with absolute path, or relative to current directory):
 state_file = vanguards.state
 
