Add control password support.
And lots more tests.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -15,6 +15,9 @@ control_port = 9051
 # If set, use this filesystem control socket instead of IP+Port:
 control_socket = 
 
+# If set, use this as the control port password:
+control_pass =
+
 # Enable/disable the bandwidth side channel detection checks:
 enable_bandguards = True
 
@@ -69,14 +72,15 @@ num_layer3_guards = 8
 circ_max_age_hours = 24
 
 # Maximum percentage of bytes from unrecognized/invalid/dropped cells on a
-# circuit before we close it:
+# circuit before we close it (set to 100.0 to disable):
 circ_max_dropped_bytes_percent = 2.5
 
 # Maximum amount of kilobytes that can be present in a hidden service
-# descriptor before we close the circuit:
+# descriptor before we close the circuit (set to 0 to disable):
 circ_max_hsdesc_kilobytes = 30
 
-# Total maximum megabytes on any circuit before we close it:
+# Total maximum megabytes on any circuit before we close it
+# (set to 0 to disable):
 circ_max_megabytes = 100
 
 
