--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -91,6 +91,12 @@ circ_max_megabytes = 100
 # multiplied by its bandwidth weight:
 rend_use_max_use_to_bw_ratio = 2.0
 
+# Close circuits where the Rendezvous Point appears too often. Note that an
+# adversary can deliberately cause RP overuse in order to impact availability.
+# If this is a concern, either set this to false, or raise the ratio
+# parameter above.
+rend_use_close_circuits_on_overuse = True
+
 # Total number of circuits we need before we begin enforcing rendezvous point
 # ratio limits:
 rend_use_global_start_count = 100
