Document potential HTTP POST issues with circ_max_megabytes.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -79,8 +79,10 @@ circ_max_dropped_bytes_percent = 2.5
 # descriptor before we close the circuit (set to 0 to disable):
 circ_max_hsdesc_kilobytes = 30
 
-# Total maximum megabytes on any circuit before we close it
-# (set to 0 to disable):
+# Total maximum megabytes on any circuit before we close it. Note that
+# while HTTP GET can resume if this limit is hit, HTTP POST will not.
+# This means that applications that require large data submission (eg
+# SecureDrop) should set this much higher (or set to 0 to disable):
 circ_max_megabytes = 100
 
 
