Clarify some options in config file and README.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -68,7 +68,8 @@ num_layer3_guards = 8
 ## Bandguards: Mechanisms to detect + mitigate bandwidth side channel attacks.
 [Bandguards]
 
-# Maximum number of hours to allow any circuit to remain open:
+# Maximum number of hours to allow any circuit to remain open
+# (set to 0 to disable):
 circ_max_age_hours = 24
 
 # Maximum percentage of bytes from unrecognized/invalid/dropped cells on a
@@ -82,7 +83,8 @@ circ_max_hsdesc_kilobytes = 30
 # Total maximum megabytes on any circuit before we close it. Note that
 # while HTTP GET can resume if this limit is hit, HTTP POST will not.
 # This means that applications that require large data submission (eg
-# SecureDrop) should set this much higher (or set to 0 to disable):
+# SecureDrop or onionshare) should set this much higher
+# (or set to 0 to disable):
 circ_max_megabytes = 100
 
 
