Correct spelling mistakes.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -1,4 +1,4 @@
-## Example vanguards configuation file
+## Example vanguards configuration file
 #
 # The values in this file are the defaults. You do not need to specify
 # options in your config file unless you wish to change the defaults.
