Issue #14: Clean up data files after tests

--- a/tests/default.conf
+++ b/tests/default.conf
@@ -8,7 +8,7 @@ enable_cbtverify = False
 enable_rendguard = True
 logfile = 
 loglevel = NOTICE
-state_file = vanguards.state
+state_file = vanguards.state.test
 
 [Vanguards]
 layer1_lifetime_days = 0
