Issue #18: Don't write torrc by default.
Also add an option --one_shot_vanguards that just writes layer2 and layer3
vanguards to torrc and then exits (for people who just want vanguards without
running this script constantly -- they can run it from cron or something).

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -27,6 +27,10 @@ enable_cbtverify = False
 # Enable/disable checks on Rendezvous Point overuse attacks:
 enable_rendguard = True
 
+# If True, we write (or update/rotate) layer2 and layer3 vanguards in torrc,
+# then exit. This option disables the bandguards and rendguard defenses.
+one_shot_vanguards = False
+
 # The current loglevel:
 loglevel = NOTICE
 
