Issue #12: Allow vanguard update to be disabled.
This allows a parent/child setup with OnionBalance where the parent
picks layer2 and layer3 guards. It can then copy its state file to the
children 1x/hour, and the children can use --one_shot_vanguards to set those
same layer2 and layer3 guards.

The children can also use separate vanguard instances with vanguard update
disabled, so they can still benefit from bandguards and rendguard.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -18,6 +18,9 @@ control_socket =
 # If set, use this as the control port password:
 control_pass =
 
+# Enable/disable active vanguard update of layer2 and layer3 guards
+enable_vanguards = True
+
 # Enable/disable the bandwidth side channel detection checks:
 enable_bandguards = True
 
