Issue #23: Implement connectivity accounting
Report when we lose all orconns or circ activity, or when orconns are
surprise-closed on live circuits.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -94,6 +94,11 @@ circ_max_hsdesc_kilobytes = 30
 # (or set to 0 to disable):
 circ_max_megabytes = 0
 
+# Warn if we can't build or use circuits for this many seconds.
+circ_max_disconnected_secs = 20
+
+# Warn if we are disconnected from the Tor network for this many seconds.
+conn_max_disconnected_secs = 15
 
 ## Rendguard: Monitors service-side Rendezvous Points to detect misuse/attack 
 [Rendguard]
