Issue #20: Defend against DropMark early, regardless of settings.
Also switch dropped cell percentage to cell count.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -79,9 +79,10 @@ num_layer3_guards = 8
 # (set to 0 to disable):
 circ_max_age_hours = 24
 
-# Maximum percentage of bytes from unrecognized/invalid/dropped cells on a
-# circuit before we close it (set to 100.0 to disable):
-circ_max_dropped_bytes_percent = 0.0
+# Maximum unrecognized/invalid/dropped cells on a circuit before we close
+# it. (Note that we also kill circuits before this limit if there are
+# dropped cells before any application data).
+circ_max_dropped_cells = 30
 
 # Maximum amount of kilobytes that can be present in a hidden service
 # descriptor before we close the circuit (set to 0 to disable):
