Issue #24: New rendguard params.
This should cut down on false positives.

--- a/tests/default.conf
+++ b/tests/default.conf
@@ -6,8 +6,10 @@ control_socket =
 enable_bandguards = True
 enable_cbtverify = False
 enable_rendguard = True
+enable_vanguards = True
 logfile = 
 loglevel = NOTICE
+one_shot_vanguards = False
 state_file = vanguards.state.test
 
 [Vanguards]
@@ -22,14 +24,16 @@ num_layer3_guards = 8
 
 [Bandguards]
 circ_max_age_hours = 24
-circ_max_dropped_bytes_percent = 2.5
+circ_max_disconnected_secs = 20
+circ_max_dropped_cells = 30
 circ_max_hsdesc_kilobytes = 30
-circ_max_megabytes = 100
+circ_max_megabytes = 0
+conn_max_disconnected_secs = 15
 
 [Rendguard]
 rend_use_close_circuits_on_overuse = True
-rend_use_global_start_count = 100
-rend_use_max_use_to_bw_ratio = 2.0
-rend_use_relay_start_count = 10
-rend_use_scale_at_count = 1000
+rend_use_global_start_count = 1000
+rend_use_max_use_to_bw_ratio = 10.0
+rend_use_relay_start_count = 100
+rend_use_scale_at_count = 20000
 
