Issue #22: Limit rend requests from relays not in our consensus.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -106,7 +106,12 @@ conn_max_disconnected_secs = 15
 
 # No relay should show up as a Rendezvous Point more often than this ratio
 # multiplied by its bandwidth weight:
-rend_use_max_use_to_bw_ratio = 10.0
+rend_use_max_use_to_bw_ratio = 5.0
+
+# What is percent of the network weight is not in the consensus right now?
+# Put another way, the max number of rend requests from relays not in the
+# consensus is rend_use_max_use_to_bw_ratio times this churn rate.
+rend_use_max_consensus_weight_churn = 1.0
 
 # Close circuits where the Rendezvous Point appears too often. Note that an
 # adversary can deliberately cause RP overuse in order to impact availability.
