Add test consensus to manifest.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,6 @@ include vanguards.1
 include tox.ini
 include .travis.yml
 recursive-include src *.py
-recursive-include tests *.conf
 recursive-include tests *.mock
 recursive-include tests *.py
+recursive-include tests cached-microdesc-consensus
