Issue #25 and Issue #3: Document change to circ_max_dropped_cells.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -80,8 +80,10 @@ num_layer3_guards = 8
 circ_max_age_hours = 24
 
 # Maximum unrecognized/invalid/dropped cells on a circuit before we close
-# it. (Note that we also kill circuits before this limit if there are
-# dropped cells before any application data).
+# it. For Tor 0.3.5.1-alpha and above, this value is ignored, and 0 is used
+# instead.
+#
+# This option will soon be deprecated.
 circ_max_dropped_cells = 30
 
 # Maximum amount of kilobytes that can be present in a hidden service
