Issue #32: Global option not to kill circuits.

--- a/tests/default.conf
+++ b/tests/default.conf
@@ -11,6 +11,7 @@ logfile =
 loglevel = NOTICE
 one_shot_vanguards = False
 state_file = vanguards.state.test
+close_circuits = True
 
 [Vanguards]
 layer1_lifetime_days = 0
