--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -30,6 +30,9 @@ enable_cbtverify = False
 # Enable/disable checks on Rendezvous Point overuse attacks:
 enable_rendguard = True
 
+# Close circuits upon suspected attack conditions:
+close_circuits = True
+
 # If True, we write (or update/rotate) layer2 and layer3 vanguards in torrc,
 # then exit. This option disables the bandguards and rendguard defenses.
 one_shot_vanguards = False
