use Tor ControlSocket unix domain socket file by default
fixes https://github.com/mikeperry-tor/vanguards/issues/47

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -13,7 +13,7 @@ control_ip = 127.0.0.1
 control_port = 9051
 
 # If set, use this filesystem control socket instead of IP+Port:
-control_socket = 
+control_socket = /run/tor/control
 
 # If set, use this as the control port password:
 control_pass =
