Issue #55: Improve options documentation.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -13,7 +13,7 @@ control_ip = 127.0.0.1
 control_port = 9051
 
 # If set, use this filesystem control socket instead of IP+Port:
-control_socket = 
+control_socket =
 
 # If set, use this as the control port password:
 control_pass =
@@ -35,6 +35,12 @@ close_circuits = True
 
 # If True, we write (or update/rotate) layer2 and layer3 vanguards in torrc,
 # then exit. This option disables the bandguards and rendguard defenses.
+# This option exists so that vanguards can be run hourly, from eg cron,
+# in situations where control port load is too high to keep a vanguards
+# instance attached. Note that with this option set, Tor will stop working
+# if all guard relays in a layer go down (on the other hand, when vanguards
+# is continually running, it can monitor the consensus and switch relays
+# that go down on the fly).
 one_shot_vanguards = False
 
 # The current loglevel:
@@ -50,7 +56,8 @@ state_file = vanguards.state
 ## Vanguards: layer1, layer2, and layer3 rotation params.
 [Vanguards]
 
-# How long to keep our layer1 guard (0 means use Tor default):
+# How long to keep our layer1 guard(s).
+# (0 means use Tor default: ~90 days currently):
 layer1_lifetime_days = 0
 
 # The maximum amount of time to keep a layer2 guard:
@@ -65,7 +72,9 @@ min_layer2_lifetime_hours = 24
 # The minimum amount of time to keep a layer3 guard:
 min_layer3_lifetime_hours = 1
 
-# The number of layer1 guards:
+# The number of layer1 guards.
+# Note that this setting causes us to set NumEntryGuards torrc option,
+# which should apply to both bridge and guard use.
 num_layer1_guards = 2
 
 # The number of layer2 guards:
@@ -78,28 +87,55 @@ num_layer3_guards = 8
 ## Bandguards: Mechanisms to detect + mitigate bandwidth side channel attacks.
 [Bandguards]
 
-# Maximum number of hours to allow any circuit to remain open
+# Maximum number of hours to allow any circuit to remain open.
+# This option exists because Tor relays rotate TLS connections 1x/week
+# and an aversary that holds circuits opened longer than this will have
+# an easier time with traffic analysis, due to lack of multiplexing with
+# other traffic. Shorter values than 24 hours do not make much sense,
+# and extremely low values like 1 hour may make you stand out.
+# Set this higher if you actually need connections to stay open
+# to your service.
 # (set to 0 to disable):
 circ_max_age_hours = 24
 
 # Maximum amount of kilobytes that can be present in a hidden service
-# descriptor before we close the circuit (set to 0 to disable):
+# descriptor before we close the circuit.
+# Typical onion service descriptors are only 14kb, but onionbalance
+# configurations may take more. This option exists because relays
+# can flood hsdesc lookups and responses with extra data, which
+# may be useful for traffic analysis.
+# (set to 0 to disable):
 circ_max_hsdesc_kilobytes = 30
 
 # Total maximum megabytes on any circuit before we close it. Note that
 # while HTTP GET can resume if this limit is hit, HTTP POST will not.
 # This means that applications that require large data submission (eg
-# SecureDrop or onionshare) should set this much higher
-# (or set to 0 to disable):
+# SecureDrop or onionshare) should set this much higher. Also, While web
+# clients *can* resume GET downloads that get cut off due to this setting,
+# most do not handle this case properly. Hence it is disabled by
+# default. However, flooding circuits with traffic can be used to assist
+# various traffic analysis attacks, hence if you do not need large downloads,
+# consider setting this, as well as generaly monitoring your service for
+# large traffic spikes.
+# (set to 0 to disable):
 circ_max_megabytes = 0
 
 # Warn if we can't build or use circuits for this many seconds.
+# Connectivity loss can be a side channel or confirmation attack, especially
+# for services. Log monitoring tools should be used to keep an eye on this.
+# Very low values may have false positives, though.
+# (set to 0 to disable):
 circ_max_disconnected_secs = 30
 
 # Warn if we are disconnected from the Tor network for this many seconds.
+# This should be less likely to happen than failure to build circuits, since
+# our TLS connections to the Tor network should not die in normal operation,
+# unless Guards go down. Again, use log monitoring tools to keep an eye out
+# for this.
+# (set to 0 to disable):
 conn_max_disconnected_secs = 15
 
-## Rendguard: Monitors service-side Rendezvous Points to detect misuse/attack 
+## Rendguard: Monitors service-side Rendezvous Points to detect misuse/attack
 [Rendguard]
 
 # No relay should show up as a Rendezvous Point more often than this ratio
@@ -108,7 +144,9 @@ rend_use_max_use_to_bw_ratio = 5.0
 
 # What is percent of the network weight is not in the consensus right now?
 # Put another way, the max number of rend requests from relays not in the
-# consensus is rend_use_max_use_to_bw_ratio times this churn rate.
+# consensus is rend_use_max_use_to_bw_ratio times this churn rate. This
+# option protects against rend use attacks that try to connect to fake
+# or private rendezvous points.
 rend_use_max_consensus_weight_churn = 1.0
 
 # Close circuits where the Rendezvous Point appears too often. Note that an
@@ -118,12 +156,19 @@ rend_use_max_consensus_weight_churn = 1.0
 rend_use_close_circuits_on_overuse = True
 
 # Total number of circuits we need before we begin enforcing rendezvous point
-# ratio limits:
+# ratio limits. Setting this lower may cause our percentile usages to have
+# false positives in the above usage detection. We need enough circuits built
+# to get a representative sample of the probabilities of relays. Consider
+# raising this value (and filing a bug) if you get false positives of
+# rend overuse.
 rend_use_global_start_count = 1000
 
 # Number of times a relay must be seen as a Rendezvous Point before applying
-# ratio limits:
+# ratio limits. Again, this helps reduce false positives. Consider
+# raising this value (and filing a bug) if you get false positives of
+# rend overuse.
 rend_use_relay_start_count = 100
 
-# Divide all relay counts by two once the total circuit count hits this many: 
+# Divide all relay counts by two once the total circuit count hits this many.
+# This helps ensure that new relays can't show up and get overused.
 rend_use_scale_at_count = 20000
