Issue #48: Clarify that CookieAuthentication use is automatic

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -15,7 +15,10 @@ control_port = 9051
 # If set, use this filesystem control socket instead of IP+Port:
 control_socket =
 
-# If set, use this as the control port password:
+# If set, use this value as the control port password.
+# Note that vanguards discovers and uses Cookie authentication
+# automatically, so you should not need a password if Tor is configured
+# to use CookieAuthentication, via tor's torrc.
 control_pass =
 
 # Enable/disable active vanguard update of layer2 and layer3 guards
