Issue #42: Add option to limit bytes on intro circs

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -110,6 +110,13 @@ circ_max_age_hours = 24
 # (set to 0 to disable):
 circ_max_hsdesc_kilobytes = 30
 
+# Maximum amount of kilobytes that can be sent on a service-side
+# introduction circuit before it is closed.
+# This can help with DoS attacks and resulting traffic analysis,
+# but it may impact reachability so it is off by default.
+# (set to 0 to disable):
+circ_max_serv_intro_kilobytes = 0
+
 # Total maximum megabytes on any circuit before we close it. Note that
 # while HTTP GET can resume if this limit is hit, HTTP POST will not.
 # This means that applications that require large data submission (eg
