Issue #56: Provide syslog logging
Also document logging a bit better.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -46,10 +46,12 @@ close_circuits = True
 # that go down on the fly).
 one_shot_vanguards = False
 
-# The current loglevel:
+# The current loglevel. Do not log below this level.
+# Available values are: ERROR, WARN, NOTICE, INFO, DEBUG.
 loglevel = NOTICE
 
-# If specified, log to this file instead of stdout:
+# If specified, log to this file instead of stdout.
+# If this is :syslog:, then log to the system logger.
 logfile =
 
 # Name of state file (with absolute path, or relative to current directory):
