--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py2,py3,pypy
+envlist = py2,py3,pypy,pypy3
 
 [testenv]
 deps = -rrequirements.txt
