--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 sudo: false
-dist: trusty
+dist: bionic
 matrix:
  include:
   - python: 2.7
@@ -8,7 +8,7 @@ matrix:
   - python: 3.8
     env: TOXENV=py3
   - python: pypy
-    env: TOXENV=pypy2
+    env: TOXENV=pypy
   - python: pypy3
     env: TOXENV=pypy3
 #before_install:
