--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     env: TOXENV=py2
   - python: 3.8
     env: TOXENV=py3
-  - python: pypy
+  - python: pypy2
     env: TOXENV=pypy
   - python: pypy3
     env: TOXENV=pypy3
