Issue #61: Add path verification component for integration testing

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -36,6 +36,9 @@ enable_rendguard = True
 # Close circuits upon suspected attack conditions:
 close_circuits = True
 
+# Enable/disable path validation analysis (for integration tests):
+enable_pathverify = False
+
 # If True, we write (or update/rotate) layer2 and layer3 vanguards in torrc,
 # then exit. This option disables the bandguards and rendguard defenses.
 # This option exists so that vanguards can be run hourly, from eg cron,
