Aha, on debian-like systems, /run/tor/control is standard

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -13,6 +13,8 @@ control_ip = 127.0.0.1
 control_port = 9051
 
 # If set, use this filesystem control socket instead of IP+Port:
+# Note that the default on debian-like systems is:
+# /run/tor/control
 control_socket =
 
 # If set, use this value as the control port password.
