Issue #64: Automatically try common control sock and control ports.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -9,12 +9,13 @@
 # IP address that the Tor control port is listening on:
 control_ip = 127.0.0.1
 
-# TCP port the control port is listening on:
-control_port = 9051
+# TCP port the control port is listening on.
+# Empty means try both 9051 and 9151
+control_port =
 
 # If set, use this filesystem control socket instead of IP+Port:
-# Note that the default on debian-like systems is:
-# /run/tor/control
+# If this and control_port are not set, we first try
+# "/run/tor/control", and then 9051, then 9151.
 control_socket =
 
 # If set, use this value as the control port password.
