Issue #75: Implement Tor log monitoring.
No unittests for this yet.

On the plus side, I fixed previous test failures.

So I got that going for me, which is nice.

--- a/vanguards-example.conf
+++ b/vanguards-example.conf
@@ -36,6 +36,9 @@ enable_cbtverify = False
 # Enable/disable checks on Rendezvous Point overuse attacks:
 enable_rendguard = True
 
+# Enable/disable reporting of important/relevant Tor logs
+enable_logguard = True
+
 # Close circuits upon suspected attack conditions:
 close_circuits = True
 
@@ -190,3 +193,21 @@ rend_use_relay_start_count = 100
 # Divide all relay counts by two once the total circuit count hits this many.
 # This helps ensure that new relays can't show up and get overused.
 rend_use_scale_at_count = 20000
+
+
+## Logguard: Monitors log messages for potential issues and debugging
+[Logguard]
+
+# If true, set ProtocolWarnings to 1 in Tor. This raises the loglevel
+# of various Tor procol errors to WARN. Most such messages are due to
+# Tor implementation bugs, but they may also appear while a service is
+# under attack.
+log_protocol_warns = True
+
+# Save this many Tor log messages in a FIFO queue (rolling list), and dump
+# them to NOTICE logs in vanguards when we encounter a suspicious issue
+# that caused us to close a circuit.
+log_dump_limit = 25
+
+# The Tor log-level to use for the above log buffer.
+log_dump_level = "NOTICE"
